@@ -1,0 +1,3 @@
+--- 
+BUNDLE_DISABLE_SHARED_GEMS: "1"
+BUNDLE_PATH: vendor/bundler
