@@ -5,3 +5,4 @@ log/*
 *~
 .DS_Store
 *.tmproj
+Gemfile.lock
