@@ -1,0 +1,15 @@
+source "http://rubygems.org"
+
+gem 'bundler', "1.0.10"
+gem "rails", "2.3.11"
+gem "mysql"
+gem "erubis"
+gem "rake"
+gem "syntax", "1.0.0"
+gem "capistrano", "2.6.0"
+gem "open4", "0.9.3"
+gem "exception_notification", "2.3.3.0"
+
+group :test do
+  gem "mocha", "0.9.8"
+end
